# wavetables

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  file_handling.c  fourier.c  helper.c  main.c  math.c  operations.c  waveforms.c  wavetables.h
.github/: FUNDING.yml
scripts/: linux_build_install_script.sh
test-input/: spectrum  test.txt
